Fixed mobile issue where image was not stretching.

--- a/docroot/themes/custom/uids_base/scss/media/media--type-image.scss
+++ b/docroot/themes/custom/uids_base/scss/media/media--type-image.scss
@@ -81,6 +81,7 @@ figure.element--cover {
   position: relative;
   &.caption {
     margin-bottom: 0;
+    display: block;
   }
   figcaption {
     position: absolute;
